Fixed layout issues and it responsive

--- a/src/scss/custom/_allListingPage.scss
+++ b/src/scss/custom/_allListingPage.scss
@@ -1,51 +1,70 @@
-
 .icon {
-    width: 50px;
-  }
-  
-  .icon-sm {
-    width: 25px;
-  }
-  
-  .ms-n5 {
-    margin-left: -40px;
-  }
-  .search-input-group {
-    position: relative;
+  width: 50px;
+}
 
-    img {
-      position: absolute;
-      top: 10px;
-      right: 30px;
+.icon-sm {
+  width: 25px;
+}
+
+.ms-n5 {
+  margin-left: -40px;
+}
+
+.search-listig-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  align-self: center;
+  margin-bottom: 2rem;
+
+  h1 {
+    margin: 4rem 0 3rem;
+  }
+
+  .search-input-flex-group {
+    display: flex;
+    width: 62%;
+
+    .search-input-icon-group {
+      position: relative;
+      width: 100%;
+
+      .search-listing-input {
+        background-color: var(--bs-white);
+        border: none;
+        width: 100%;
+        height: 2.7rem;
+        margin-right: 0.8rem;
+        box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.2) inset;
+        -webkit-box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.2) inset;
+        -moz-box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.2) inset;
+
+        &:focus {
+          background-color: var(--bs-white);
+        }
+      }
+
+      img {
+        position: absolute;
+        top: 10px;
+        right: 30px;
+      }
     }
   }
-  
-  .input-group .search-listing-input {
-    background-color: var(--bs-white);
-    border: none;
-    width: 30rem;
-    height: 2.7rem;
-    margin-right: 0.8rem;
-    box-shadow: 1px 3px 5px 0px rgba(0,0,0,0.2) inset;
-    -webkit-box-shadow: 1px 3px 5px 0px rgba(0,0,0,0.2) inset;
-    -moz-box-shadow: 1px 3px 5px 0px rgba(0,0,0,0.2) inset;
+}
 
-    &:focus {
-      background-color: var(--bs-white);
+@media (max-width: 34em) {
+  .search-listig-section {
+    .search-input-flex-group {
+      flex-direction: column;
+      width: 80%;
+      .search-input-icon-group {
+        img {
+          right: 8px;
+        }
+      }
     }
   }
-
-  @media (max-width: 34em) {
-
-    .input-group .search-listing-input {
-      width: 20rem;
-    }
-  }
-
-  @media (max-width: 25em) {
-
-    .input-group .search-listing-input {
-      width: 16rem;
-    }
-  }
-
+}
